# pixi

examples/fastapi-hello-world/: README.md  main.py  pixi.toml
examples/fastapi-hello-world-pyproject/: pyproject.toml
examples/fastapi-hello-world-pyproject/tests/: test.py
