[project]
name = "fastapi-hello-world-pyproject"
version = "0.1.0"
description = "Example how to get started with fastapi in a pixi environment."
readme = "README.md"
requires-python = "<=3.11.9"
dependencies = ["uvicorn[standard] >=0.12.0", "fastapi==0.110.*"]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
name = "fastapi-hello-world-pyproject"
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
fastapi-hello-world-pyproject = { path = ".", editable = true }

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]
start = "python -m uvicorn fastapi_hello_world_pyproject.main:app --reload"

[tool.pixi.feature.test.tasks]
test = "pytest -v tests/*"
